# AgentFactory

./: .env.example  .gitignore  hermes_chat.html  pyproject.toml  registry.yaml
docs/: agent_factory.md
hermes/: __init__.py  cli.py
hermes/factory/: __init__.py  agent_spec.py  factory_service.py  file_generator.py  llm_spec_builder.py  registry_updater.py  template_selector.py
hermes/factory/templates/briefing_agent/: agent.yaml.j2  prompt.md.j2  workflow.py.j2
hermes/factory/templates/briefing_agent/tests/: test_agent_permissions.py.j2
hermes/factory/templates/computer_use_agent/: README.md.j2  prompt.md.j2  tools.yaml.j2  workflow.py.j2
hermes/factory/templates/computer_use_agent/tests/: test_agent_permissions.py.j2
hermes/factory/templates/monitor_agent/: README.md.j2  prompt.md.j2  workflow.py.j2
hermes/factory/templates/monitor_agent/tests/: test_agent_permissions.py.j2
hermes/factory/templates/research_agent/: prompt.md.j2  workflow.py.j2
hermes/factory/validators/: __init__.py  generated_agent_validator.py  permission_validator.py
hermes/runtime/: __init__.py  backends.py  executor.py
hermes/server/: __init__.py  app.py
hermes/server/static/: index.html
hermes/tools/: __init__.py  gmail.py  loader.py  slack.py  web.py
tests/: test_factory.py
