[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
description = "Hermes Agent Factory - Generate safe, controlled Hermes agents from natural language"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
hermes = "hermes.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]
